# ck

./: .coveragerc  .gitignore  .travis.yml  404.html  AUTHORS  AUTHORS.txt  CHANGES  CHANGES.txt  CONTRIBUTING.md  CONTRIBUTIONS  CONTRIBUTIONS.txt  CONTRIBUTORS.md  COPYRIGHT.txt  ChangeLog  Copyright.txt  HISTORY.CM.md  LICENSE.cM.txt  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  TODO.txt  appveyor.yml  citation.bib  cmr.yaml  index.html  main.py  mkdocs.yml  requirements.txt  set-env.sh  setup.debian.py  setup.py  setup.py.debian
.github/: CODEOWNERS  FUNDING.yml
cm/: .gitignore  CHANGES.md  CONTRIBUTING.md  COPYRIGHT.txt  HISTORY.md  MANIFEST.in  README.CM.md  README.CMX.md  README.md  appveyor.yml  debugx.py  index.html  pyproject.toml  requirements.txt  setup.py
cm/cmind/: __init__.py  __main__.py  artifact.py  automation.py  cli.py  config.py  core.py  index.py  net.py  repo.py  repos.py  utils.py
cm/cmind/repo/: README.md  cmr.yaml
cm/dev/cmx/: README.md
cm/docs/: README.md  architecture.md  conf.py  conventions.md  enhancements.md  example-modular-image-classification.md  index.rst  installation.md  motivation.md  specification.md  structure.md  tutorial-concept.md  tutorial-ic.md  tutorial-modular-mlperf.md  tutorial-scripts.md
cm/docs/KB/: ML.md  MLOps.md
cm/docs/auto/: make-docs.bat  make-docs.sh
cm/docs/cmx/: README.md  install.md
cm/docs/demos/: some-cm-commands.md
cm/docs/projects/: automated-ae.md  modular-ai.md  modular-mlperf.md
cm/meetings/: notes-20220331.md  notes-20220412.md  notes-20220420.md  notes-20220427.md  notes-20220511.md  notes-20220602.md  notes-20220607.md  notes-20220614.md  notes-20220622.md  notes-20220627.md  notes-20220715.md  notes-20220801.md  notes-20220822.md  notes-20220830.md  notes-20220905.md  notes-20220907.md  notes-20220930.md  notes-20220931.md
cm4mlops/: README.md  pyproject.toml
cm4mlops/cm4mlops/: COPYRIGHT.txt  __init__.py  cmr.yaml
cm4mlops/cm4mlops/repo/: COPYRIGHT.md
cm4mlops/cm4mlops/repo/docs/: index.md
cmx4mlops/: COPYRIGHT.txt  README.md  cmr.yaml  pyproject.toml
cmx4mlops/cmx4mlops/: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.third-party.md  __init__.py  cmr.yaml
cmx4mlops/cmx4mlops/repo/: .gitignore  CHANGES.md  CONTRIBUTING.md  HISTORY.md  README.md  mkdocs.yml  requirements.txt
cmx4mlops/cmx4mlops/repo/docs/: cm-yaml-guide.md  getting-started.md  requirements.txt
cmx4mlops/cmx4mlops/repo/script/: README.md  generate-docs-for-all-scripts.cmd
cmx4mlops/cmx4mlops/repo/tests/: test_cm.py
cmx4mlops/repo/automation/cmx-demo/: _cm.yaml  modulex.py
cmx4mlops/repo/automation/flex.cache/: _cm.yaml  modulex.py
cmx4mlops/repo/automation/flex.cfg/: _cm.yaml  modulex.py
cmx4mlops/repo/automation/flex.code/: _cm.yaml  modulex.py
cmx4mlops/repo/automation/flex.common/: _cm.yaml  modulex.py  modulex_hf.py  modulex_rclone_mlcommons.py
cmx4mlops/repo/automation/flex.compute/: _cm.yaml
cmx4mlops/repo/automation/flex.dataset/: _cm.yaml
cmx4mlops/repo/automation/flex.doc/: _cm.yaml
cmx4mlops/repo/automation/flex.docker/: _cm.yaml
cmx4mlops/repo/automation/flex.experiment/: _cm.yaml  modulex.py
cmx4mlops/repo/automation/flex.model/: _cm.yaml
cmx4mlops/repo/automation/flex.study/: _cm.yaml
cmx4mlops/repo/automation/flex.sys-tool/: _cm.yaml
cmx4mlops/repo/automation/flex.system/: _cm.yaml  modulex.py
cmx4mlops/repo/automation/flex.task/: README.md  _cm.yaml  modulex.py  modulex_help.py  modulex_template.py
cmx4mlops/repo/automation/flex.task.input/: _cm.yaml
cmx4mlops/repo/flex.code/ctuning-shared-matmul-c/: README.md  _cm.yaml  ck_meta.json  data  matmul.c  xopenme.c  xopenme.h
cmx4mlops/repo/flex.code/mlperf-training-bert-nvidia/: README.md  _cm.yaml
cmx4mlops/repo/flex.code/mlperf-training-llama2-pytorch/: README.md  _cm.yaml
cmx4mlops/repo/flex.compute/cpu/: _cm.yaml
cmx4mlops/repo/flex.compute/cpu_clang_cpp/: _cm.yaml
cmx4mlops/repo/flex.compute/cpu_gcc/: _cm.yaml
cmx4mlops/repo/flex.compute/cpu_gcc_cpp/: _cm.yaml
cmx4mlops/repo/flex.compute/cpu_visual_cpp/: _cm.yaml
cmx4mlops/repo/flex.compute/cuda/: _cm.yaml
cmx4mlops/repo/flex.compute/cuda_nvcc/: _cm.yaml
cmx4mlops/repo/flex.compute/rocm/: README.md  TBD.md  _cm.yaml
cmx4mlops/repo/flex.dataset/_generic-hf/: _cm.yaml  download.py  modulex.py
cmx4mlops/repo/flex.dataset/openorca_hf/: _cm.yaml
cmx4mlops/repo/flex.dataset/scrolls_gov_report_8k-mlperf/: _cm.yaml  modulex.py
cmx4mlops/repo/flex.dataset/scrolls_gov_report_preprocessed_mlperf_2_hf/: _cm.yaml  modulex.py
cmx4mlops/repo/flex.docker/mlperf-inference-nvidia/: _cm.yaml  _cm_mlperf_inf_4.1.yaml
cmx4mlops/repo/flex.docker/mlperf-training/: _cm.yaml  _cm_mlperf_training_4.1_nvidia_llama2_flexai_root.Dockerfile  _cm_mlperf_training_4.1_nvidia_llama2_flexai_root.yaml  _cm_mlperf_training_4.1_nvidia_llama2_flexai_venv.Dockerfile  _cm_mlperf_training_4.1_nvidia_llama2_flexai_venv.yaml  _cm_mlperf_training_4.1_nvidia_llama2_flexai_venv_sys.Dockerfile  _cm_mlperf_training_4.1_nvidia_llama2_flexai_venv_sys.yaml
cmx4mlops/repo/flex.docker/os-min/: _cm.yaml  _cm_archlinux.yaml  _cm_rhel-9.yaml  _cm_ubuntu-20.04.yaml  _cm_ubuntu-22.04.yaml  _cm_ubuntu-24.04.yaml
cmx4mlops/repo/flex.docker/pytorch-nvidia/: _cm.yaml  _cm_22.10.yaml  _cm_23.05.yaml  _cm_24.01.yaml  _cm_24.03.yaml  _cm_24.06.yaml  _cm_24.08.yaml  _cm_24.10.yaml
cmx4mlops/repo/flex.model/_generic-hf/: _cm.yaml  download.py  modulex.py
cmx4mlops/repo/flex.model/chufansuki-lenet5-hf/: _cm.yaml
cmx4mlops/repo/flex.model/gpt2-1558M-final3-karpathy-hf/: _cm.yaml  modulex.py
cmx4mlops/repo/flex.model/llama-2-70b-lora-fused-qkv-mlperf-hf/: _cm.yaml
cmx4mlops/repo/flex.model/llama-2-70b-lora-fused-qkv-mlperf-rclone/: _cm.yaml  modulex.py
cmx4mlops/repo/flex.model/llama-2-7b-chat-hf-mlperf-short-rclone/: _cm.yaml
cmx4mlops/repo/flex.model/llama-3.1-8b-hf/: _cm.yaml
cmx4mlops/repo/flex.sys-tool/7z/: _cm.yaml
cmx4mlops/repo/flex.sys-tool/accelerate/: _cm.yaml
cmx4mlperf/: README.md  cmr.yaml  pyproject.toml  requirements.txt
cmx4mlperf/cmx4mlperf/: cmr.yaml
(+6349 files in other folders)
