[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "cmind"

authors = [
    {name = "Grigori Fursin", email = "grigori.fursin@ctuning.org"}
]

maintainers = [
    {name = "Grigori Fursin", email = "grigori.fursin@ctuning.org"}
]

description = "Common Metadata eXchange framework (CMX) and Collective Mind automation framework (CM)"

requires-python = ">=3.7"

dependencies = [
    "pyyaml", 
    "requests", 
    "setuptools",
    "wheel",
    "giturlparse",
    "tabulate"
]

keywords = [
 "cmind",
 "cm",
 "cmx",
 "cmx-mlcflow",
 "cmx-mlcr",
 "common metadata exchange",
 "collective mind",
 "automation",
 "portability",
 "reusability",
 "mlops",
 "devops",
 "vmlops",
 "api",
 "cli"
]

license = {text = "Apache 2.0"}

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["readme", "version"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "cmind.__version__"}

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
cmind = ["repo/*", 
         "repo/automation/automation/*",
         "repo/automation/ckx/*",
         "repo/automation/mlc/*",
         "repo/automation/mlcr/*",
         "repo/automation/core/*",
         "repo/automation/core/cm_60cb625a46b38610/*",
         "repo/automation/repo/*"
        ]

[tool.setuptools.packages.find]
where = ["."]
include = ["cmind"]
exclude = ["docs", "docs.*", "tests", "tests.*"]


[project.urls]
Homepage = "https://cKnowledge.org"
Documentation = "https://docs.mlcommons.org/ck"
Repository = "https://github.com/mlcommons/ck/tree/master/cm"
Issues = "https://github.com/mlcommons/ck/issues"
Changelog = "https://github.com/mlcommons/ck/blob/master/cm/CHANGES.md"

[project.scripts]
cmx = "cmind.cli:runx"
cmind = "cmind.cli:runx"
cm = "cmind.cli:run"
cmxr = "cmind.cli:run_legacy_mlcr"
cmlcr = "cmind.cli:run_legacy_mlcr"
cr = "cmind.cli:run_legacy_mlcr"
cmlc = "cmind.cli:run_legacy_mlc"
cmr = "cmind.cli:run_script"
cmrd = "cmind.cli:docker_script"
cmg = "cmind.cli:gui_script"
cme = "cmind.cli:run_experiment"
