# Author and developer: Grigori Fursin

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "cmx4mlperf"

authors = [
    {name = "Grigori Fursin and contributors", email = "grigori.fursin@ctuning.org"}
]

maintainers = [
    {name = "Grigori Fursin", email = "grigori.fursin@ctuning.org"}
]

description = "CMX4MLPerf repository with legacy MLPerf automations"

requires-python = ">=3.7"

dependencies = [
    "cmind>=4.1.3",
    "mlc-scripts",
    "flextask" 
]

keywords = [
 "cmx4mlperf",
 "legacy-cm",
 "cmx",
 "mlcflow",
 "mlcr",
 "mlperf-automations"
]

license = {text = "Apache 2.0"}

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["readme", "version"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {file = "VERSION"}

[tool.setuptools]
zip-safe = false
include-package-data = true

[project.urls]
Homepage = "https://github.com/mlcommons/ck"
Documentation = "https://docs.mlcommons.org/ck"
Repository = "https://github.com/mlcommons/ck/tree/master/cmx4mlperf"
Issues = "https://github.com/mlcommons/ck/issues"
Changelog = "https://github.com/mlcommons/ck/blob/master/cmx4mlperf/CHANGES.md"
