[project]
name = "deepseek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "mlcommons-loadgen>=5.0.15",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "rouge-score>=0.1.2",
    "torch>=2.5.1",
    "transformers>=4.48.3",
    "vllm>=0.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
